fix spacing of reservation details on restaurant show page

--- a/app/assets/stylesheets/components/_reservation_index_item.scss
+++ b/app/assets/stylesheets/components/_reservation_index_item.scss
@@ -1,3 +1,6 @@
+.full-link {
+    text-decoration: none;
+}
 
 .res-photo-main-index {
     object-fit: cover;
@@ -44,6 +47,7 @@
 
 .res-icon {
     zoom: 1.5;
+    color: darkslategray;
 }
 
 .res-item-name {
